# Ravyn

./: .gitignore  .mcp.json  AGENTS.md  API_UI_MAP.md  BACKEND_CAPABILITY_MATRIX.md  CHECKPOINT_PASS2_2026-07-14.md  CLAUDE.md  COMPATIBILITY.md  COMPLETION_PASS_2026-07-14.md  Cargo.toml  DESIGN_PLAN(2).md  DESKTOP_RELEASE_CHECKLIST.md  ENGINE_AUTO_PROVISIONING.md  FRONTEND_COMPLETION_REPORT.md  FRONTEND_REDESIGN_PROGRESS_2026-07-14.md  FRONTEND_REDESIGN_PROGRESS_PHASE2_2026-07-14.md  FRONTEND_REDESIGN_PROGRESS_PHASE3_2026-07-14.md  FRONTEND_REDESIGN_PROGRESS_PHASE4_2026-07-14.md  FRONTEND_REDESIGN_PROGRESS_PHASE5_2026-07-14.md  FULLSTACK_HARDENING_PHASE6_2026-07-14.md  FULLSTACK_LIBRARY_MOVE_PHASE7_2026-07-14.md  FULLSTACK_UPDATER_PHASE8_2026-07-14.md  LIBRARY_FEATURES_PLAN.md  LIBRARY_IMPLEMENTATION_REPORT.md  PROJECT_STATUS.md  RAVYN_FRONTEND_SETUP_DESIGN_PLAN.md  RAVYN_MASTER_PROJECT_DOCUMENT.md  README.md  RELEASE.md  SCREEN_INVENTORY.md  SECURITY.md  deny.toml  report.md  todo.md
.github/workflows/: backend-ci.yml  nightly.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/audit/: bugfix_session_2026_07_17.md  deep_dive_2026_07_16.md
.serena/memories/backend/: core.md  library.md  media_lifecycle.md  rqbit_contracts.md  runtime_settings.md
assets/engines/: stable.json
benches/: transfer_policy.rs
docs/: APP_UPDATES.md  CHECKPOINT_STATUS_2026-07-16.md  COMPLETION_REPORT_2026-07-16.md  COMPONENT_MANIFESTS.md  FIREFOX_EXTENSION.md  FIREFOX_EXTENSION_IMPLEMENTATION_PLAN.md  FIREFOX_EXTENSION_IMPLEMENTATION_REPORT.md  RELEASE_CHECKLIST.md  SETUP_CAPABILITY_MATRIX.md  SYNTHETIC_BACKDROP.md  WINDOWS_BACKDROP.md
extension/: AMO_SUBMISSION.md  AUDIT.md  PRIVACY.md  README.md  THREAT_MODEL.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  web-ext-config.mjs
extension/artifacts/: ravyn-firefox-0.2.0.xpi
extension/manifests/: base.json  firefox.json
extension/scripts/: build-firefox.mjs  clean.mjs  deterministic-zip.py  package-firefox.mjs  package-source.mjs  verify-packages.mjs
extension/static/: common.css
extension/test-pages/: direct.html  dynamic.html  frame-child.html  iframe.html  index.html  server.mjs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: browser_origin.rs  content_disposition.rs  content_range.rs  cron.rs  engine_manifest.rs  import_lines.rs  metalink.rs  native_message.rs  restore_marker.rs  rqbit_payload.rs  url_security.rs  ytdlp_progress.rs
migrations/: 0001_init.sql  0002_phase1.sql  0003_torrent.sql  0004_hardening.sql  0005_automation.sql  0006_performance.sql  0007_reliability.sql  0008_outputs.sql  0009_schedule_execution_lifecycle.sql  0010_runtime_settings.sql  0011_observability_maintenance.sql  0012_secret_references.sql  0013_output_lineage_and_secret_binding.sql  0014_media_playlist_torrent_policy.sql  0015_media_auxiliary_outputs.sql  0016_scheduler_policies.sql  0017_schedule_timezones.sql  0018_audit_hash_chain.sql  0019_library.sql  0020_presets_profiles_basket.sql  0021_components.sql  0022_setup_state.sql  0023_component_health.sql  0024_setup_installation.sql  0025_setup_integration_consent.sql  0026_library_root_move.sql  0027_completed_progress_backfill.sql
src/: config.rs  error.rs  lib.rs  main.rs  native_protocol.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: compact.json  default.json  main.json  setup.json
src-tauri/permissions/: app-commands.toml
src-tauri/permissions/autogenerated/: app_update_status.toml  apply_windows_integration.toml  backend_info.toml  browser_integration_status.toml  cancel_app_update.toml  check_app_update.toml  desktop_appearance.toml  finish_setup_handoff.toml  focus_main_window.toml  install_app_update_now.toml  main_window_ready.toml  notify_native.toml  open_compact_window.toml  open_native_path.toml  prompt_torrent_default_app.toml  remove_browser_integration.toml  repair_application.toml  repair_browser_integration.toml  restart_application.toml  reveal_native_path.toml  setup_installation_info.toml  take_browser_action.toml
src-tauri/src/: app_updates.rs  appearance.rs  backend.rs  browser_integration.rs  installation.rs  integration.rs  lib.rs  main.rs  native_messaging.rs  native_notifications.rs  setup_guard.rs  shell_paths.rs  silent_command.rs  torrent_association.rs  tray.rs  uninstall.rs  webview_runtime.rs
src-tauri/src/app_updates/: installer_helper.rs  storage.rs
src-tauri/src/native_messaging/: event_stream.rs  validation.rs
src-tauri/windows/: firefox-native-host.wxs  hooks.nsh
src/adapters/: media.rs  mod.rs  torrent.rs
src/api/: mod.rs  openapi.rs  pagination.rs  routes.rs
src/core/: automation.rs  bandwidth.rs  bulk.rs  dispatcher.rs  events.rs  execution.rs  lifecycle.rs  maintenance.rs  manager.rs  media_control.rs  metrics.rs  mod.rs  models.rs  progress.rs  rate_limit.rs  torrent_control.rs
src/download/: adapter.rs  http.rs  mod.rs  planner.rs  probe.rs  segmented.rs
src/postprocess/: pipeline.rs
src/services/: app_updates.rs  browser.rs  checksum.rs  components.rs  cron.rs  dedup.rs  engines.rs  filename.rs  imports.rs  manifest_refresh.rs  metalink.rs  mod.rs  presets.rs  process.rs  rqbit_process.rs  rules.rs  scheduler.rs  schedules.rs  secrets.rs  security.rs  sniffer.rs  trust.rs
src/storage/: audit.rs  automation.rs  backup.rs  basket.rs  components.rs  host_profiles.rs  jobs.rs  library.rs  library_move.rs  media.rs  mod.rs  outputs.rs  pagination.rs  presets.rs  profiles.rs  recovery.rs  repository.rs  repository_tests.rs  schedules.rs  secrets.rs  segments.rs  settings.rs  setup.rs  torrent_policy.rs
tests/: http_integration.rs
tools/: static_source_audit.py  test_validate_component_manifest.py  validate_component_manifest.py  validate_update_helper.ps1
(+241 files in other folders)
