[package]
name = "ravyn-desktop"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Ravyn desktop shell: setup and main application windows"

[lib]
name = "ravyn_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
mcp-automation = ["dep:tauri-plugin-mcp-bridge"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
hex = "0.4"
percent-encoding = "2"
ravyn = { path = ".." }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "stream", "json", "blocking"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
# Debug-only automation bridge used by the tauri-mcp test tooling.
tauri-plugin-mcp-bridge = { version = "0.12", optional = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_UI_Shell"] }
